syntax = "proto3";

package envoy.extensions.filters.network.receiver.v3;

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.network.receiver.v3";
option java_outer_classname = "ReceiverProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/network/receiver/v3;receiverv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Receiver]
// Receiver :ref:`configuration overview <config_network_filters_receiver>`.
// [#extension: envoy.filters.network.receiver]

message Receiver {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.config.filter.network.receiver.v2.Receiver";
  uint32 payload_bound = 1;
  uint32 circle_size = 2;
  uint32 time_to_write = 3;
  uint32 shared_buffer_size = 4;
}
