syntax = "proto3";

package envoy.extensions.filters.network.receiver_rdma.v3;

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.network.receiver_rdma.v3";
option java_outer_classname = "ReceiverRDMAProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/network/receiver_rdma/v3;receiver_rdmav3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: ReceiverRDMA]
// ReceiverRDMA :ref:`configuration overview <config_network_filters_receiver_rdma>`.
// [#extension: envoy.filters.network.receiver_rdma]

message ReceiverRDMA {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.config.filter.network.receiver_rdma.v2.ReceiverRDMA";
  string destination_cluster = 1;
}
